[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-effects"
version = "0.1.0"
description = "Unified image filter module: vx1000, tonal, watercolor."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pillow",
    "opencv-python",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "watercolor @ git+https://github.com/krshI27/watercolor.git",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py314"]
